<resources>
    <string name="app_name">QBudz</string>
    <string name="buddhist">Buddhist</string>
    <string name="history">History</string>
    <string name="art">Art</string>
    <string name="science">Science</string>
    <string name="sinhala">Sinhala</string>
    <string name="english">English</string>
    <string name="topic">Topic</string>
    <string name="choose_subject">Subject</string>
    <string name="material">Material</string>
    <string name="browse">Browse</string>
    <string name="add">Add</string>
    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="IT">IT</string>

    <array name="subjects">
        <item>Select Subject</item>
        <item>Sinhala</item>
        <item>Buddhist</item>
        <item>Art</item>
        <item>Science</item>
        <item>English</item>
        <item>Maths</item>
    </array>

</resources>
